--- a/HomeApps/Views/CameraModels/Edit.cshtml
+++ b/HomeApps/Views/CameraModels/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeApps.Model
+﻿@model HomeApps.ModelPeople
 
 @{
     ViewBag.Title = "Edit";
@@ -19,7 +19,7 @@
         <h4>Model</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ModelID)
+        @Html.HiddenFor(model => model.ModelPersonID)
 
         <div class="form-group">
             @Html.Label("First Name", htmlAttributes: new { @class = "control-label col-md-2" })
