--- a/HomeApps/Views/Miles/Create.cshtml
+++ b/HomeApps/Views/Miles/Create.cshtml
@@ -30,7 +30,7 @@
         </div>
 
         <div class="form-group">
-            <span class="col-md-1"> @Html.LabelFor(model => model.StationID, "Station", htmlAttributes: new { @class = "control-label" }) - <span onclick='AddStation()'>Add new Station</span></span>
+            <span class="col-md-1"> @Html.LabelFor(model => model.StationID, "Station", htmlAttributes: new { @class = "control-label" }) - <span onclick='AddStation()'><u>Add new Station</u></span></span>
             <div class="col-md-10">
                 @Html.DropDownList("StationID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.StationID, "", new { @class = "text-danger" })
@@ -74,7 +74,7 @@
 
     </div>
 
-    <input type="submit" value="Add" class="btn-default" />
+    <input type="submit" value="Add" class="btn btn-primary" />
 }
 <!-- The Modal -->
 <div id="myModal" class="modal">
