Updated some code.

--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -11,7 +11,7 @@
 }
 @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Models").Equals(true))
 {
-<div>@Html.ActionLink("Models", "Index", "CameraModels/Index", null, new { })</div>
+<div>@Html.ActionLink("Models", "Index", "ModelPeoples", null, new { })</div>
 <br />
 }
 
