--- a/HomeApps/Views/Stations/Create.cshtml
+++ b/HomeApps/Views/Stations/Create.cshtml
@@ -5,17 +5,21 @@
     Layout = "~/Views/Shared/_GasLayout.cshtml";
 }
 
-<h2>Create</h2>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
-@using (Html.BeginForm()) 
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Station</h4>
+        <h4>Create Station</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -26,7 +30,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
