--- a/HomeApps/Views/Actions/Create.cshtml
+++ b/HomeApps/Views/Actions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model  string
+﻿@model  HomeApps.Action
 
 @{
     ViewBag.Title = "Create";
@@ -19,14 +19,14 @@
         <div class="form-group">
             @Html.Label("Event Act", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.Editor("action", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Editor("action", new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
               
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
