--- a/HomeApps/Views/UsersPeoples/Create.cshtml
+++ b/HomeApps/Views/UsersPeoples/Create.cshtml
@@ -10,6 +10,7 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.UserID)
     
     <div class="form-horizontal">
         <hr />
@@ -30,13 +31,13 @@
             </div>
         </div>
 
-        <div class="form-group" style="display:none">
+        @*<div class="form-group" style="display:none">
             @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
