--- a/HomeApps/Views/TheEvents/Edit.cshtml
+++ b/HomeApps/Views/TheEvents/Edit.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_MateLayout.cshtml";
+    string dateofevent = Model.DateOfEvent.ToShortDateString();
 }
 
 <h2>Edit The Event</h2>
@@ -20,7 +21,7 @@
         <div class="form-group">
             @Html.Label("Date:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfEvent, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBox("DateOfEvent",dateofevent, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateOfEvent, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -28,7 +29,7 @@
         <div class="form-group">
             @Html.Label("Title:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EventName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.EventName, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                 @Html.ValidationMessageFor(model => model.EventName, "", new { @class = "text-danger" })
             </div>
         </div>
